[package]
name = "the_nuker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.8.1"
num_cpus = "1.16.0"
itertools = "0.11.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
lexopt = "0.3.0"
dialoguer = "0.11.0"